objects/DocumentRequirement__c.object
<CustomObject>
    <fields>
        <fullName>DocumentRequirementAgencyCountSummary__c</fullName>
        <description>The number of agencies that have this document requirement. Zero signifies all agencies have the same requirement, meaning no agency is an exception.</description>
        <inlineHelpText>The number of agencies that have this document requirement. Zero signifies all agencies have the same requirement, meaning no agency is an exception.</inlineHelpText>
        <label>Agency Count Summary</label>
        <summaryForeignKey>DocumentRequirementAgency__c.DocumentRequirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentRequirementEID__c</fullName>
        <description>The Enterprise ID for this Document Requirement record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Document Requirement record.</inlineHelpText>
        <label>Document Requirement EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program category this documentation requirement fulfills</description>
        <inlineHelpText>The program category this documentation requirement fulfills</inlineHelpText>
        <label>Program Category</label>
        <referenceTo>ProgramCategory__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Document Requirements</relationshipLabel>
        <relationshipName>DocumentRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>The order in which a requirement should be listed in a report or cover sheet.</description>
        <inlineHelpText>The order in which a requirement should be listed in a report or cover sheet.</inlineHelpText>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentRequirementEID__c</columns>
        <columns>ProgramCategory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NullCheck</fullName>
        <active>false</active>
        <description>One parent foreign key fields must be null and one must be not null</description>
        <errorConditionFormula>or( 
and( 
not( 
isblank( Program__c ) 
), 
not( 
isblank( ProgramCategory__c ) 
) 
), 
and( 
isblank( Program__c ), 
isblank( ProgramCategory__c ) 
) 
)</errorConditionFormula>
        <errorMessage>You must supply either a &quot;Program Category&quot; or a &quot;Program,&quot; but not both. You see, this requirement can only track the document requirements for the category or the certification documents for the program, but not both at the same time.</errorMessage>
    </validationRules>
</CustomObject>